# recschemes

./: .gitignore  LICENSE  README.md  ghost  go  recschemes.cabal  stack.yaml
bench/: Main.hs
munge/: Main.hs
org/: ch1.org  ch2.org  ch3.org  ch4.org  ch4p5.org  ch5.org  ch6.org
src/: Part1.hs  Part2.hs  Part3.hs  Part4.hs  Part4.lhs  Part4Point5.lhs  Part4Temp.lhs  Part5.hs  Part5.lhs  Part6.hs  Part6.md  Part6.org  preview.html
test/: Part1Spec.hs  Part2Spec.hs  Part3Spec.hs  Part4Spec.hs  Part5Spec.lhs  Part5Spec.lhs.disabled  Spec.hs
txt/: #ch1.md#  ch1.md  ch2.md  ch3.md  ch4.5.md  ch4.md  ch5.md
