name:                recschemes
version:             0.1.0.0
homepage:            https://github.com/patrickt/recschemes#readme
license:             OtherLicense
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrick.william.thomson@gmail.com
copyright:           2017 Patrick Thomson
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Part1
                       Part2
                       Part3
                       Part4
  build-depends:       base >= 4.7 && < 5
                     , pretty
  default-language:    Haskell2010

test-suite recschemes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Part1Spec
                       Part2Spec
                       Part3Spec
                       Part4Spec
  build-depends:       base
                     , recschemes
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/recschemes
