name:                recschemes
version:             0.1.0.0
homepage:            https://github.com/patrickt/recschemes#readme
license:             OtherLicense
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrick.william.thomson@gmail.com
copyright:           2017 Patrick Thomson
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Part1
                       Part2
                       Part3
                       Part4
                       Part4Point5
  build-depends:       base >= 4.7 && < 5
                     , boxes
                     , containers
                     , pretty
                     , random
  default-language:    Haskell2010
--  ghc-options:         -Wall

executable mungehtml
  hs-source-dirs:      munge
  build-depends:       base >= 4.7 && < 5
                     , xml-conduit
                     , xml-lens
                     , lens
                     , html-conduit
  main-is:             Main.hs
  default-language:    Haskell2010

benchmark bench
    build-depends:    base
                    , criterion
                    , free
                    , recschemes
                    , recursion-schemes
    default-language: Haskell2010
    hs-source-dirs:   bench
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    ghc-options:      -O

test-suite recschemes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Part1Spec
                       Part2Spec
                       Part3Spec
                       Part4Spec
  build-depends:       base
                     , random
                     , recschemes
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/recschemes
